Added changes to index page and also still working on saving the user

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,5 @@
 @use 'reset';
-@use 'login';
+@use '../components/UI/Login/Login';
 @use 'create-user';
 @use '../components/UI/Header/_header.scss';
 @use '../components/UI/SideNav/side-nav';
